Sat Oct 27 10:05:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (fstat): use _fstati64() instead of fstati64()
	  on mingw32.

Sat Oct 27 06:28:33 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* object.c (rb_mod_const_get): const_get accepts qualified constant
	  strings.  e.g. Object.const_get("Foo::Bar::Baz") [ruby-core:41404]

	* test/ruby/test_module.rb: tests for new behavior

Fri Oct 26 13:24:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen): merge fixed strings across
	  concatenated literals, after an interpolation.

Thu Oct 25 17:48:54 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (has_redirection): should use shell (cmd.exe) when
	  the commandline containts '&'.
	  reported by Roger Pack at [ruby-core:47912] [Bug #7143], and
	  patched by Heesob Park at [ruby-core:47931].

Thu Oct 25 15:00:08 2012  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h, class.c: remove (revert)
	  `rb_add_method_cfunc_frameless()' API.
	  This API is not mature to become an offical API.
	  For example, we can not use this API with
	  `rb_define_private_method()'.

	* method.h, vm_method.c (rb_add_method_cfunc_frameless): removed.

Thu Oct 25 13:35:07 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/mkconfig.rb: remove string literal concatenation.

Wed Oct 24 18:49:16 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/objspace/objspace.c (type2sym, count_objects_size): use enum
	  instead of size_t which may be larger than actual values.

Wed Oct 24 17:41:24 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: add `-x' or `--exclude' option
	  to specify exclude benchmark name pattern.
	  You can specify "-x foo" if you want to exclude the benchmarks
	  if the name of benchmark contains `foo'.

Wed Oct 24 11:57:24 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_prepare_free_objects): rename to match the behavior of
	  this function.
