@@ -1,3 +1,9 @@
+Sat Oct 27 10:07:57 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (enum lex_state_e): [EXPERIMENTAL] lex_state as bit field /
+	  IS_lex_state() macro.  based on the patch by Dave B in
+	  [ruby-core:23503].  [Feature #1493]
+
 Sat Oct 27 10:05:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/win32.h (fstat): use _fstati64() instead of fstati64()
